docs: add api usage documentation

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,9 @@
+ENV=development
+PORT=8080
+DOMAIN=localhost
 SUPERUSER_EMAIL=admin@example.com
 SUPERUSER_PASSWORD=changethis
-DB_HOST=postgres_db
+DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=fileShare
 DB_USERNAME=myuser
