feat: add email to user registration handler

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,11 @@ DOCKER_IMAGE=fileShare
 TAG=latest
 
 STORAGE_PATH=data/uploads
+
+
+MAILTRAP_SMTP_HOST=sandbox.smtp.mailtrap.io
+MAILTRAP_SMTP_PORT=2525
+MAILTRAP_USER=mailtrap_username
+MAILTRAP_PASSWORD=mailtrap_password
+MAILTRAP_SENDER_EMAIL=noreply@qlikrasen.com
+
