--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,7 @@ DB_NAME=fileShare
 DB_USERNAME=myuser
 DB_PASSWORD=mypass
 DB_SCHEMA=public
+MAX_UPLOAD_SIZE=209715200 #200MB
 UPLOADS_DIR=data/uploads
 UPLOADS_DIR_DOCKER=/${UPLOADS_DIR}
 JWT_SECRET=supersecretkey
