feat: add asynq background tasks processor

--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ JWT_SECRET=supersecretkey
 PROJECT_NAME=fileShare
 
 DB_URL=postgres://${DB_USERNAME}:${DB_PASSWORD}@localhost/${DB_NAME}?sslmode=disable&search_path=${DB_SCHEMA}
-REDIS_ADDR=redis:6379
+REDIS_ADDR=localhost:6379
 
 GOOSE_DRIVER=postgres
 GOOSE_MIGRATION_DIR=schema
