--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,7 @@ DB_SCHEMA=public
 MAX_UPLOAD_SIZE=104857600 #100MB
 UPLOADS_DIR=data/uploads
 UPLOADS_DIR_DOCKER=/${UPLOADS_DIR}
+STORAGE_TYPE="local" #OR cloud for prod
 JWT_SECRET=supersecretkey
 
 PROJECT_NAME=fileShare
