feat: add file not found error

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,12 @@ TAG=latest
 
 STORAGE_PATH=data/uploads
 
+S3_ACCESS_KEY="changethis"
+S3_SECRET_KEY="changethis"
+S3_ENDPOINT="changethis"
+S3_REGION="changethis"
+S3_BUCKET="changethis"
+
 
 MAILTRAP_SMTP_HOST=sandbox.smtp.mailtrap.io
 MAILTRAP_SMTP_PORT=2525
